--- a/src/menu/src/app/app.component.html
+++ b/src/menu/src/app/app.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar color="primary">
   <span>Single Spa Angular Cli</span>
   <span class="spacer"></span>
-  <a href="/#/home">
+  <a href (click)="navigate('/home', $event)">
     <mat-icon class="example-icon">home</mat-icon>
   </a>
-  <a href="/#/app2">
+  <a href (click)="navigate('/app2', $event)">
     <mat-icon class="example-icon">done_all</mat-icon>
   </a>
-  <a href="/#/app1">
+  <a href (click)="navigate('/app1', $event)">
     <mat-icon class="example-icon">done</mat-icon>
   </a>
 </mat-toolbar>
