--- a/src/app2/src/styles.css
+++ b/src/app2/src/styles.css
@@ -36,6 +36,7 @@ body {
 }
 
 body {
+	padding-top: 70px;
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4em;
 	background: #f5f5f5;
