--- a/src/menu/src/styles.css
+++ b/src/menu/src/styles.css
@@ -3,10 +3,14 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 menu-root {
-    width: 100%;
+	width: 100%;
+	margin-bottom: 20px;
+	position: fixed;
+	top: 0;
 }
 
 body {
+	padding-top: 70px;
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4em;
 	background: #f5f5f5;
