--- a/src/menu/src/app/app.component.html
+++ b/src/menu/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>Single Spa Angular Cli</span>
+  <span>Micro FrontEnds POC</span>
   <span class="spacer"></span>
   <a href (click)="navigate('/home', $event)">
     <mat-icon class="example-icon">home</mat-icon>
